--- a/cs 370/.godot/editor/editor_layout.cfg
+++ b/cs 370/.godot/editor/editor_layout.cfg
@@ -19,19 +19,19 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://character/Modern tiles_Free/Interiors_free/16x16/Interiors_free_16x16.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://demo/", "res://character/", "res://character/Modern tiles_Free/", "res://character/Modern tiles_Free/Interiors_free/", "res://character/Modern tiles_Free/Interiors_free/16x16/", "res://assets/", "res://assets/Modern_Interiors_Free_v2.2/Modern tiles_Free/")
+dock_filesystem_selected_paths=PackedStringArray("res://character/base.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://character/", "res://assets/", "res://assets/aisha/", "res://assets/aisha/More_aishastuff/", "res://assets/aisha/guides/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://my_world.tscn", "res://first_game.tscn", "res://demo/demos.tscn", "res://character/character_body_2d.tscn", "res://character/base.tscn")
+open_scenes=PackedStringArray("res://my_world.tscn", "res://character/character_body_2d.tscn", "res://character/base.tscn")
 current_scene="res://character/base.tscn"
 center_split_offset=-684
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
